# haskal

./: .gitignore  README.md  cabal.project.local  haskal.cabal
src/: Haskal.cpphs  macros.h
