cabal-version: 1.18
name: haskal
version: 0.1.0.0
author: Vanessa McHale
build-type: Simple
extra-source-files:
    src/macros.h
    cabal.project.local
extra-doc-files: README.md

flag development
    description:
        Enable `-Werror`
    default: False
    manual: True

executable haskal
    main-is: Haskal.hs
    build-tools: cpphs -any
    hs-source-dirs: src
    default-language: Haskell98
    ghc-options: -Wall
    build-depends:
        base <5
    
    if flag(development)
        ghc-options: -Werror
    
    if impl(ghc >=8.0)
        ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates
                     -Wredundant-constraints -Wnoncanonical-monad-instances
    
    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists
